osh history fix stdout

--- a/Project/Project2/Project2.tex
+++ b/Project/Project2/Project2.tex
@@ -179,7 +179,10 @@
             }
         \end{lstlisting}
 
-        \item[3]  
+        \item[3] 重定向输入输出
+        
+        
+        \item[4] 
         使用下面的 Makefile 编译：
         \code{src/Makefile}{}
 
