--- a/Homework/HW05/HW05.tex
+++ b/Homework/HW05/HW05.tex
@@ -6,6 +6,10 @@
 \usepackage{amsmath}
 \usepackage{bookmark}
 \usepackage{enumerate}
+\usepackage{array}
+\usepackage{xfp}
+\usepackage{colortbl}
+
 \tcbuselibrary{documentation}
 \graphicspath{{img/}}
 % 边距
@@ -18,6 +22,9 @@
 \providecommand{\ans}{\textbf{答}:~}
 % 解
 \providecommand{\sol}{\textbf{解}.~}
+
+\newcommand{\allpart}{20}
+\providecommand{\blk}[2]{\framebox[\fpeval{round(#2/\allpart*\textwidth*0.8,2)}pt]{$P_#1$}}
 
 \begin{document}
 \title{\normalsize \underline{操作系统(D)}\\\LARGE第 5 次作业}
@@ -54,6 +61,55 @@
         time (over all processes)?
     \end{steps}
 
+    \sol
+        \begin{steps}
+            \item[a] 甘特图如下：
+             
+            \renewcommand{\allpart}{20}
+            \begin{tabular}{cc}
+                FCFS & \blk{1}{2}\blk{2}{1}\blk{3}{8}\blk{4}{4}\blk{5}{5}\\
+                SJF & \blk{2}{1}\blk{1}{2}\blk{4}{4}\blk{5}{5}\blk{3}{8}\\
+                Prority & \blk{3}{8}\blk{5}{5}\blk{1}{2}\blk{4}{4}\blk{2}{1}\\
+                RR & \blk{1}{2}\blk{2}{1}\blk{3}{2}\blk{4}{2}\blk{5}{2}\blk{3}{2}\blk{4}{2}\blk{5}{2}\blk{3}{2}\blk{5}{1}\blk{3}{2}
+            \end{tabular} 
+
+            \item[b] 周转时间表：
+            \begin{center}
+            \begin{tabular}{c|rrrr}
+                & FCFS & SJF & Priority & RR \\
+                \hline
+                $P_1$ & 2 & 3 & 15& 2\\
+                $P_2$ & 3 & 1 & 20& 3\\
+                $P_3$ & 11& 7 & 8 & 20\\
+                $P_4$ & 15& 12& 19& 13\\
+                $P_5$ & 20& 20& 13& 18
+            \end{tabular}
+            \end{center}
+
+            \item[c] 等待时间表：
+            \begin{center}
+            \begin{tabular}{c|rrrr}
+                & FCFS & SJF & Priority & RR \\
+                \hline
+                $P_1$ & 0 & 1 & 13&0\\
+                $P_2$ & 2 & 0 & 19&2\\
+                $P_3$ & 3 & 12& 0 &12\\
+                $P_4$ & 11& 3 & 15&9\\
+                $P_5$ & 15& 7 & 8 &13
+            \end{tabular}
+            \end{center}
+            \item[d] 等待平均时间：
+            \begin{center}
+            \begin{tabular}{c|rrrr}
+                & FCFS & SJF & Priority & RR \\
+                \hline
+                Waiting Avg & 6.2& 4.6& 11& 7.2\\ 
+            \end{tabular}
+            \end{center} 
+
+            所以 SJF 拥有更短的平均等待时间。
+        \end{steps}
+
     \item[5.5] The following processes are being scheduled using a preemptive, roundrobin
     scheduling algorithm.
 
@@ -70,7 +126,7 @@
     Each process is assigned a numerical priority,with a higher number indicating
 a higher relative priority. In addition to the processes listed below,
 the system also has an \textbf{idle task} (which consumes no CPU resources and
-is identified as Pidle). This task has priority 0 and is scheduled whenever
+is identified as $P_{idle}$). This task has priority 0 and is scheduled whenever
 the system has no other available processes to run. The length of a time quantum is 10 units. If a process is preempted by a higher-priority
 process, the preempted process is placed at the end of the queue.
 
@@ -79,6 +135,39 @@ process, the preempted process is placed at the end of the queue.
     \item[b] What is the turnaround time for each process?
     \item[c]  What is the waiting time for each process?
     \item[d] What is the CPU utilization rate?
+\end{steps}
+
+\sol \begin{steps}
+    \item[a] 甘特图如下：
+    
+    \renewcommand{\allpart}{125}
+    \begin{tabular}{cc}
+        RR & \blk{1}{10}\blk{1}{10}\blk{{idle}}{10}\blk{2}{10}\blk{3}{10}\blk{2}{10}\blk{4}{10}\blk{3}{5}\blk{2}{5}\blk{4}{5}\blk{{idle}}{10}\blk{{idle}}{10}\blk{6}{10}\blk{5}{10}
+    \end{tabular}
+
+    \item[b] 周转时间表：
+    
+    \begin{tabular}{c|rrrrrr}
+        & $P_1$ & $P_2$ & $P_3$ & $P_4$ & $P_5$ & $P_6$ \\
+        \hline
+        finish & 20 & 60 & 75 & 85 & 125 & 115\\
+        \rowcolor{green!20} turnaround & 20 & 35 & 45 & 25 & 25 & 10
+    \end{tabular}
+
+    \item[c] 等待时间：
+     
+    \begin{tabular}{c|rrrrrr}
+         & $P_1$ & $P_2$ & $P_3$ & $P_4$ & $P_5$ & $P_6$ \\
+        \hline
+        arrival & 0 & 25 & 30 & 60 & 100 & 105 \\
+        \rowcolor{green!20} waiting & 0 & 30 & 20 & 10 & 15 & 0 
+    \end{tabular}
+
+    \item[d] CPU 利用率：
+    \begin{equation*}
+        \left(1 - \frac{30}{125} \right)\times 100 \%=76\% 
+    \end{equation*} 
+
 \end{steps}
 
 \item[5.10] The traditional UNIX scheduler enforces an inverse relationship between
@@ -96,6 +185,17 @@ processes when priorities are recalculated? Based on this information,
 does the traditional UNIX scheduler raise or lower the relative priority
 of a CPU-bound process?
 
+\sol 
+
+\begin{tabular}{c|rrr}
+     & $P_1$ & $P_2$ & $P_3$ \\
+     \hline
+    recent CPU Usage & 40 & 18 & 10 \\
+    \rowcolor{green!20} priority & 80 & 69 & 65 
+\end{tabular}
+
+UNIX 降低了常用进程的优先级。
+
 \item[5.18] The following processes are being scheduled using a preemptive,
 priority-based, round-robin scheduling algorithm.
 
@@ -109,8 +209,8 @@ $P_5$ & 5 & 5 &45\\
 $P_6$ & 5 & 15& 55
 \end{tabular}
 
-Each process is assigned a numerical priority,with a higher number indicating
-a higher relative priority. The scheduler will execute the highestpriority
+Each process is assigned a numerical priority, with a higher number indicating
+a higher relative priority. The scheduler will execute the highest priority
 process. For processes with the same priority, a round-robin
 scheduler will be used with a time quantum of 10 units. If a process is
 preempted by a higher-priority process, the preempted process is placed
@@ -122,6 +222,32 @@ at the end of the queue.
     \item[c]  What is the waiting time for each process?
 \end{steps}
 
+\sol \begin{steps}
+    \item[a] 甘特图如下：
+    
+    \renewcommand{\allpart}{95}
+    \blk{1}{10}\blk{2}{10}\blk{1}{5}\blk{3}{10}\blk{4}{10}\blk{5}{5}\blk{2}{10}\blk{6}{10}\blk{3}{10}\blk{4}{10}\blk{6}{5}
+    
+    \item[b] 周转时间表：
+     
+    \begin{tabular}{c|rrrrrr}
+        & $P_1$ & $P_2$ & $P_3$ & $P_4$ & $P_5$ & $P_6$ \\
+        \hline
+        finish & 25 & 60 & 80 & 90 & 50 & 95\\
+        \rowcolor{green!20} turnaround & 25 & 60 & 60 & 65 & 5 & 40
+    \end{tabular}
+
+    \item[c] 等待时间表： 
+    
+    \begin{tabular}{c|rrrrrr}
+        & $P_1$ & $P_2$ & $P_3$ & $P_4$ & $P_5$ & $P_6$ \\
+       \hline
+       arrival & 0 & 0 & 20 & 25 & 45 & 55 \\
+       \rowcolor{green!20} waiting & 10 & 40 & 40 & 45 & 0 & 25
+   \end{tabular}
+     
+\end{steps}
+
 \item[5.20] Which of the following scheduling algorithms could result in starvation?
 \begin{steps}
     \item[a] First-come, first-served
@@ -129,6 +255,8 @@ at the end of the queue.
     \item[c]  Round robin
     \item[d]  Priority
 \end{steps} 
+
+\sol 最短作业优先调度(b.) 和 优先级调度(d.)。因为前者可以作业时间很长的任务可能会永远得不到执行，后者优先级很低的任务可能永远得不到执行。
 
 \end{problems}
 
